Fixed email word wrap and too big card title on small screens.

--- a/src/Components/ProjectCard.scss
+++ b/src/Components/ProjectCard.scss
@@ -36,7 +36,7 @@
         position: absolute;
         width: 100%;
         height: 100%;
-        font-size: 32px;
+        font-size: 30px;
         opacity: 0;
         padding: 0 32px;
     }
@@ -75,6 +75,14 @@
         text-shadow: 0 0 10px $dark;
         font-size: 48px;
         background-image: linear-gradient(to bottom, rgba(255,0,0,0), $dark);
+
+        @media screen and (max-width: map-get($grid-breakpoints, md)) {
+            font-size: 38px;
+        }
+
+        @media screen and (max-width: map-get($grid-breakpoints, sm)) {
+            font-size: 30px;
+        }
     }
 }
 
